# study-scriber

./: .cursorignore  .dockerignore  .env.example  .gitignore  .gptree_config  AUDIO_CHUNK_CONFIG.md  BUG_REPORT.md  DEVELOP.md  Makefile  PRD.md  README.md  SPEC.md  Todos.md  gptree_output.txt  main.py  manual_migration.py  migration_add_processing_status.sql  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  run_migration.py  run_tests.py  test_websocket.py
.cursor/rules/: backend.mdc  developer-guide.mdc  development-notes.mdc  frontend-guide.mdc  frontend.mdc  gitflow.mdc  learned-memories.mdc  memory.mdc  plan.mdc  playwright-e2e-testing.mdc  python.mdc  react.mdc  task-list.mdc
.serena/: project.yml
.serena/memories/: project_overview.md  suggested_commands.md  testing_conventions.md  websocket_testing_solution.md
app/: __init__.py
app/api/: export.py  notes.py  segments.py  sessions.py
app/core/: audio_vad.py  config.py  container.py  ffmpeg.py  llm_manager.py  webm_header_repairer.py
app/db/: database.py  models.py  supabase_config.py  supabase_init.sql
app/lib/: httpx_timeout.py  prom_helpers.py  rate_limit.py  settings_utils.py
app/middleware/: session_guard.py
app/schemas/: export.py  note.py  session.py
app/services/: azure_openai.py  azure_openai_v2.py  azure_whisper.py  export_service.py  interfaces.py  r2_client.py  summary.py  transcript_feed.py
app/utils/: __init__.py  db_compatibility.py  export.py  text_quality.py  timer.py  timing.py  validators.py
app/ws/: __init__.py  transcript_feed.py  upload_audio.py
e2e/: export-api.spec.ts  summary-feature.spec.ts
frontend/: .env.example  .env.local  E2E_TEST_SUMMARY.md  README.md  REFACTOR_TESTING_GUIDE.md  app-store-zustand.ts  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  study-scriber.tsx  tsconfig.tsbuildinfo  vitest.config.ts
frontend/.next/: BUILD_ID  app-build-manifest.json  build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  react-loadable-manifest.json  required-server-files.json  trace
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: NetworkRestorerClient.tsx  RightPanel.tsx  SessionLoadingOverlay.tsx  debug-panel.tsx  default-state.tsx  finish-state.tsx  llm-settings-dialog.tsx  provider-context-menu.tsx  recording-active-state.tsx  recording-state.tsx  recording-waiting-state.tsx  transcript-debugger.tsx  upload-status-indicator.tsx  waiting-state.tsx
frontend/constants/: languages.ts  providers.ts
frontend/e2e/: export-api.spec.ts  export-flow.spec.ts  integration-complete.spec.ts  offline-recovery.spec.ts  recording-full-flow.spec.ts  service-layer-integration.spec.ts  transcript-integration.spec.ts  transcript-realtime.spec.ts
frontend/hooks/: use-app-state-adapter.ts  use-app-state-context.ts  use-app-state-new.ts  use-app-state.ts  use-local-draft.ts  use-notes.ts  use-recording-adapter.ts  use-recording-new.ts  use-recording.ts  (+8 more)
localhost-whisper/: .cursorignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  pytest.ini
localhost-whisper/app/: config.py  main.py
localhost-whisper/app/api/: __init__.py  health.py  models.py  transcriptions.py
localhost-whisper/app/middleware/: error_handler.py  metrics.py
localhost-whisper/app/services/: model_manager.py  rate_limiter.py  transcription.py
localhost-whisper/app/utils/: audio.py  validators.py
localhost-whisper/configs/: logging.yaml
localhost-whisper/scripts/: benchmark.py  download_models.py
migrations/: 20250713_add_enum_lang.sql
scripts/: cleanup.sh
test/: README.md  backend_broadcast_test.py  frontend_debug.html  simple_websocket_test.py  test_transcription_service.py  websocket_debug.py  websocket_push_test.py
tests/: README.md  __init__.py  conftest.py  test_report.py
(+604 files in other folders)
