[project]
name = "study-scriber"
version = "0.1.0"
description = "Cloud note tool: record, real-time transcript, Markdown notes & export as ZIP."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "supabase>=2.0.0",
    "postgrest>=0.10.0",
    "python-dotenv>=1.0.0",
    "ffmpeg-python>=0.2.0",
    "azure-storage-blob>=12.19.0",
    "openai>=1.14.0",
    "pydantic>=2.6.0",
    "boto3>=1.34.0",
    "aiosqlite>=0.21.0",
    "greenlet>=3.2.3",
    # 測試依賴
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-cov>=4.0.0",
]
