[project]
name = "study-scriber"
version = "0.1.0"
description = "Cloud note tool: record, real-time transcript, Markdown notes & export as ZIP."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "psycopg2-binary",
    "uvloop",
    "httpx",
    "aiohttp",
    "loguru",
    "supabase",
    "gotrue",
    "postgrest",
    "realtime",
    "storage3",
    "openai",
    "aiofiles",
    "python-multipart",
    "google-generativeai",  # 提供 google.generativeai.GenerativeModel
    # Task 5: 監控依賴
    "prometheus-client",
    # 測試依賴
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "--cov=app"
