[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlx-whisper-api"
version = "1.0.0"
description = "OpenAI-compatible Whisper API server using MLX on Apple Silicon"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
keywords = ["whisper", "mlx", "speech-to-text", "api", "apple-silicon"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

# 核心依賴
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "mlx>=0.4.0",
    "mlx-whisper>=0.2.0",
    "huggingface-hub>=0.19.0",
    "librosa>=0.10.1",
    "soundfile>=0.12.1",
    "numpy>=1.25.0,<2.0",
    "pydantic>=2.7.2",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "prometheus-client>=0.20.0",
    "psutil>=5.9.8",
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "aiofiles>=23.2.1"
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0"
]
test = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
mlx-whisper-api = "app.main:app" # 注意：這裡通常指向一個可以啟動 app 的函式

[project.urls]
Homepage = "https://github.com/yourusername/mlx-whisper-api"
Repository = "https://github.com/yourusername/mlx-whisper-api"
Issues = "https://github.com/yourusername/mlx-whisper-api/issues"

# 針對建構工具的設定
[tool.hatch.build.targets.sdist]
include = ["/app", "/main.py", "/pyproject.toml", "/README.md"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
